syntax = "proto3";

package ssi;

service SSIService {
  rpc VerifyFullIdentity (VerifyRequest) returns (VerifyResponse);
}

message VerifyRequest {
  string userId = 1;
  string credential = 2;
}

message VerifyResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
  bool verified = 4;
  string message = 5;
}
